<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/plain_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/player_name" />

    <EditText
        android:id="@+id/player_name_in_join_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/trasparent_bg"
        android:ems="10"
        android:hint="@string/player_name_hint"
        android:textColor="@android:color/white" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/ip_address" />

    <EditText
        android:id="@+id/room_ip_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/trasparent_bg"
        android:ems="10"
        android:hint="@string/ip_hint"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/join_game_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_game_txt" />

</LinearLayout>
